<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@color/lightBrown">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CalcCapacity">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="1056dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calccapacity" />

        <EditText
            android:id="@+id/textViewy"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="232dp"
            android:layout_marginTop="16dp"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerB"/>

        <EditText
            android:id="@+id/textViewv"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="232dp"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:textAlignment="center"
            android:hint="@string/_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewy"/>

        <EditText
            android:id="@+id/textViewl"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="232dp"
            android:text="@string/_315"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewv"/>
<RadioGroup
    android:id="@+id/radioGroupMat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="460dp"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/radioButtonDegreesMaterial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="477dp" />

        <RadioButton
            android:id="@+id/radioButtonDegreesMaterial2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="532dp" />

        <RadioButton
            android:id="@+id/radioButtonDegreesMaterial3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="582dp" />
</RadioGroup>
        <RadioGroup
            android:id="@+id/radioGroupRol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupMat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/radioButtonDegreesRol1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="640dp" />

        <RadioButton
            android:id="@+id/radioButtonDegreesRol2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="733dp" />

        <RadioButton
            android:id="@+id/radioButtonDegreesRol3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="790dp" />

        <RadioButton
            android:id="@+id/radioButtonDegreesRol4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_40"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="806dp" />
    </RadioGroup>
        <TextView
            android:id="@+id/textViewQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tire"
            android:textSize="20sp"
            android:layout_marginTop="19dp"
            android:layout_marginStart="156dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupRol"/>

        <TextView
            android:id="@+id/textViewF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tire"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="28dp"
            android:layout_marginStart="156dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQ" />

        <Button
            android:id="@+id/button7"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Result"
            android:onClick="ClickresultCap"
            android:backgroundTint="@color/greyDark"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Clear"
            android:onClick="ClickClearCap"
            android:backgroundTint="@color/greyDark"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Spinner
            android:id="@+id/spinnerB"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="230dp"
            android:entries="@array/width"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
